# NuTel_SNe_BSM

./: .gitignore  README.md  ic_sn_hnl.bib  magnetic_moment.ipynb  majoran.ipynb  pyproject.toml
examples/: Untitled.ipynb  Untitled2.ipynb  analysis.ipynb  compute_hits.ipynb  hnl_analysis.ipynb  magnetic_moment.txt  majoran_analysis.ipynb  old_analysis.ipynb  paper_plots.ipynb  prepare_h5_file.ipynb  test.txt
examples/data/: dune_magnetic_moment_sens.csv  energy_loss_bound.npy  new_exclusion.csv  previous_results.h5  results.h5  serialized_sm_flux.h5
paper/: ic_sn_hnl.bib  main.tex
paper/sections/: conclusion.tex  detector_response.tex  introduction.tex  model.tex  packages.tex  preamble.tex  stats.tex  supplements.tex
resources/other_bounds/: hyper_magnetic_moment_sens.csv  magnetic_moment_lower_exc_1.csv  magnetic_moment_upper_exc_1.csv  magnetic_moment_upper_exc_2.csv  no_high_e_bound.npy
scripts/: 0_parameterize_flux.py  1_run_trials.py  README.md  env.sh
scripts/0_parameterize_flux/: README.md  submit_parameterize_flux.sbatch
scripts/1_run_trials/: 1_run_trials.py  README.md  submit_run_trials.sbatch  utils.py
scripts/2_assess_sensitivity/: 2_assess_sensitivity.py  README.md
scripts/3_make_ts_time_series/: 3_make_ts_time_series.py  README.md  plot_output.py  utils.py
scripts/4_gen2_projection/: README.md  submit_run_trials.sbatch
scripts/c0_mismodeling_false_positive/: .run_trials.txt  bsmnames.txt  c0_run_trials.py  execute.sh  (+1 more)
sne_bsm/: .gitignore  __init__.py  compute_hits.py  likelihood.py  units.py
submit/: call_run_trials.sbatch
(+13 files in other folders)
