[tool.poetry]
name = "sne-bsm"
version = "0.1.0"
description = ""
authors = ["Jeffrey Lazar <jeff.p.lazar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.12.0"
astropy = "^6.0.0"
snewpy = "^1.4.1"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
